Completed 90% of HTML and CSS, hover-active state and responsiveness are yet to add.

--- a/index.html
+++ b/index.html
@@ -85,8 +85,26 @@
 				</section>
 				<!-- Output Calculator -->
 				<section class="output">
-					<div class="calculation-container">Calulate</div>
-					<div class="reset-container">Reset</div>
+					<div class="calculation-container">
+						<div class="calculated-tip">
+							<div class="tip-desc">
+								<p>Tip Amount</p>
+								<span>/person</span>
+							</div>
+							<p class="tip-per-person">$0.00</p>
+						</div>
+
+						<div class="calculated-tip">
+							<div class="tip-desc">
+								<p>Tip Amount</p>
+								<span>/person</span>
+							</div>
+							<p class="tip-per-person">$0.00</p>
+						</div>
+					</div>
+					<div class="reset-container">
+						<button type="reset" id="reset">Reset</button>
+					</div>
 				</section>
 			</main>
 
