95% UI completed but hover state and active state are needs to be checked and review the css and html to remove unnecessary code

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 							<p class="tip-per-person">$0.00</p>
 						</div>
 
-						<div class="calculated-tip">
-							<div class="tip-desc">
-								<p>Tip Amount</p>
+						<div class="calculated-total">
+							<div class="total-desc">
+								<p>Total</p>
 								<span>/person</span>
 							</div>
-							<p class="tip-per-person">$0.00</p>
+							<p class="total-per-person">$0.00</p>
 						</div>
 					</div>
 					<div class="reset-container">
