started working on js

--- a/index.html
+++ b/index.html
@@ -77,7 +77,23 @@
 					</div>
 				</div>
 				<!-- Right -->
-				<div class="calculator">Right Side</div>
+				<div class="calculator grid">
+					<div class="flex">
+						<div class="flex">
+							<p>Tip Amount</p>
+							<span>/ person</span>
+						</div>
+						<span class="calculated-tip">$0.00</span>
+					</div>
+					<div class="flex">
+						<div class="flex">
+							<p>Total</p>
+							<span>/ person</span>
+						</div>
+						<span class="calculated-total">$0.00</span>
+					</div>
+					<button type="reset">Reset</button>
+				</div>
 			</section>
 		</main>
 
