--- a/index.html
+++ b/index.html
@@ -11,124 +11,82 @@
 		<link rel="stylesheet" href="./dist/css/style.css" />
 
 		<title>Frontend Mentor | Tip calculator app</title>
-
-		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-		<style>
-			.attribution {
-				font-size: 11px;
-				text-align: center;
-			}
-			.attribution a {
-				color: hsl(228, 45%, 44%);
-			}
-		</style>
 	</head>
-	<body class="grid">
-		<!-- Main -->
-		<main class="main grid">
-			<!-- App Header -->
-			<header class="header flex">
-				<img src="./images/logo.svg" alt="Splitter Logo" aria-label="Splitter" />
+	<body>
+		<!-- Container -->
+		<div class="container">
+			<!-- Header -->
+			<header class="header">
+				<img src="./images/logo.svg" alt="Splitter Logo" />
 			</header>
-			<!-- App Body -->
-			<section class="app grid" role="application">
-				<!-- Left  -->
-				<div class="process grid">
-					<div class="flex">
-						<label for="bill-amount">Bill</label>
-						<input
-							class="input"
-							type="number"
-							name="bill-amount"
-							id="amount"
-							placeholder="0"
-							required
-						/>
+			<!-- Main -->
+			<main class="main">
+				<!-- Tip Calculation Process/form -->
+				<form class="process form">
+					<div class="form__group">
+						<label for="bill-input">Bill</label>
+						<input type="number" name="bill-amount" id="bill-input" placeholder="0" required />
 					</div>
-					<div class="tip-categories grid">
+					<div class="form__group grid">
 						<p>Select Tip %</p>
+
 						<input type="radio" name="tip-percent" id="5" value="5" />
-						<label for="5"><span>5%</span></label>
+						<label for="5">5%</label>
+
 						<input type="radio" name="tip-percent" id="10" value="10" />
-						<label for="10"><span>10%</span></label>
+						<label for="10">10%</label>
+
 						<input type="radio" name="tip-percent" id="15" value="15" />
-						<label for="15"><span>15%</span></label>
+						<label for="15">15%</label>
+
 						<input type="radio" name="tip-percent" id="25" value="25" />
-						<label for="25"><span>25%</span></label>
+						<label for="25">25%</label>
+
 						<input type="radio" name="tip-percent" id="50" value="50" />
-						<label for="50"><span>50%</span></label>
-						<input
-							class="input"
-							type="number"
-							name="tip-percent"
-							id="custom"
-							placeholder="Custom"
-						/>
+						<label for="50">50%</label>
+
+						<input type="number" name="tip-percent" id="custom-input" placeholder="Custom" />
 					</div>
-					<div class="flex">
-						<label for="num-of-people">Num of People</label>
-						<input
-							class="input"
-							type="number"
-							name="num-of-people"
-							id="num-of-people"
-							placeholder="0"
-						/>
+					<div class="form__group">
+						<label for="people-input">
+							<span>Number of People</span>
+							<span class="warning">Can't be zero</span>
+						</label>
+						<input type="number" name="num-of-people" id="people-input" placeholder="0" required />
 					</div>
-				</div>
-				<!-- Right -->
-				<div class="calculator grid">
-					<div class="flex">
-						<div class="flex">
-							<p>Tip Amount</p>
+				</form>
+				<!-- Tip Calculated Output -->
+				<div class="result">
+					<div class="result__row">
+						<div class="result__tip">
+							<span>Tip Amount</span>
 							<span>/ person</span>
 						</div>
-						<span class="calculated-tip">$0.00</span>
+						<p class="result__tip-per-person">$0.00</p>
 					</div>
-					<div class="flex">
-						<div class="flex">
-							<p>Total</p>
+					<div class="result__row">
+						<div class="result__total">
+							<span>Total</span>
 							<span>/ person</span>
 						</div>
-						<span class="calculated-total">$0.00</span>
+						<p class="result__total-per-person">$0.00</p>
 					</div>
 					<button type="reset">Reset</button>
 				</div>
-			</section>
-		</main>
-
-		<!-- <footer>
-			<div class="attribution">
-				Challenge by
-				<a
-					href="https://www.frontendmentor.io?ref=challenge"
-					target="_blank"
-					rel="noreferrer noopener"
-					>Frontend Mentor</a
-				>. Coded by <a href="https://vaibhavsompura.netlify.app">Vaibhav Sompura</a>.
-			</div>
-		</footer> -->
-
-		<!-- 
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset -->
+			</main>
+			<!-- Footer -->
+			<footer>
+				<div class="attribution">
+					Challenge by
+					<a
+						href="https://www.frontendmentor.io?ref=challenge"
+						target="_blank"
+						rel="noreferrer noopener"
+						>Frontend Mentor</a
+					>. Coded by <a href="https://vaibhavsompura.netlify.app">Vaibhav Sompura</a>.
+				</div>
+			</footer>
+		</div>
 
 		<!-- JavaScript -->
 		<script src="./dist/js/script.js"></script>
