Completed HTML,CSS,JS. There are still many bugs in app but will debug them soon.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<input type="radio" name="tip-percent" id="10" value="10" />
 						<label for="10">10%</label>
 
-						<input type="radio" name="tip-percent" id="15" value="15" />
+						<input type="radio" name="tip-percent" id="15" value="15" checked />
 						<label for="15">15%</label>
 
 						<input type="radio" name="tip-percent" id="25" value="25" />
@@ -50,7 +50,7 @@
 					<div class="form__group">
 						<label for="people-input">
 							<span>Number of People</span>
-							<span class="warning">Can't be zero</span>
+							<span class="warning hide">Can't be zero</span>
 						</label>
 						<input type="number" name="num-of-people" id="people-input" placeholder="0" required />
 					</div>
