--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
       href="./images/favicon-32x32.png"
     />
 
-    <!-- linking stylesheet -->
-    <link rel="stylesheet" href="./dist/css/style.css" />
-
+    <link rel="stylesheet" href="/css/index.css" />
+    <script src="/js/index.js" type="module"></script>
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
   <body>
@@ -103,8 +102,5 @@
         >
       </p>
     </footer>
-
-    <!-- JS -->
-    <script src="./dist/js/script.js"></script>
   </body>
 </html>
