--- a/index.html
+++ b/index.html
@@ -4,103 +4,123 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
-    <link rel="stylesheet" href="/css/index.css" />
-    <script src="/js/index.js" type="module"></script>
+    <link rel="stylesheet" href="./public/css/index.css" />
+    <script src="./public/js/index.js" type="module"></script>
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
   <body>
-    <!-- Header -->
-    <header class="header flex">
-      <img src="./images/logo.svg" alt="Splitter Logo" />
-    </header>
+    <main class="calculator-layout">
+      <header>
+        <img aria-hidden="true" src="./images/logo.svg" alt="" />
+        <h1 class="sr-only">Tip Calculator</h1>
+      </header>
 
-    <!-- Main -->
-    <main class="app container grid">
-      <div class="process grid">
-        <div class="flex flex-col">
-          <label for="bill-input">Bill</label>
-          <input
-            type="number"
-            class="input fs-input"
-            id="bill-input"
-            placeholder="0"
-            required
-          />
-        </div>
-        <div class="flex flex-col">
-          <label for="custom-tip">Select Tip %</label>
-          <div class="grid tip-grid">
-            <input type="radio" name="tip-radio" id="5" value="5" />
-            <label for="5" class="fs-input">5%</label>
-            <input type="radio" name="tip-radio" id="10" value="10" />
-            <label for="10" class="fs-input">10%</label>
-            <input type="radio" name="tip-radio" id="15" value="15" checked />
-            <label for="15" class="fs-input">15%</label>
-            <input type="radio" name="tip-radio" id="25" value="25" />
-            <label for="25" class="fs-input">25%</label>
-            <input type="radio" name="tip-radio" id="50" value="50" />
-            <label for="50" class="fs-input">50%</label>
+      <section>
+        <form class="calculation-form">
+          <div class="form-group">
+            <label for="bill-amount">Bill</label>
             <input
               type="number"
-              class="input fs-input"
-              name="tip-radio"
-              id="custom-tip"
-              placeholder="Custom"
+              name="bill-amount"
+              id="bill-amount"
+              placeholder="0"
+              required
             />
           </div>
-        </div>
-        <div class="flex flex-col">
-          <div class="flex">
-            <label for="people-input">Number of People</label>
-            <span class="warning">Can't be zero</span>
+          <fieldset>
+            <div class="form-group">
+              <legend>Select Tip %</legend>
+              <label for="tip-1"
+                ><input
+                  type="radio"
+                  name="tip-amount"
+                  id="tip-1"
+                  value="5"
+                />5%</label
+              >
+              <label for="tip-2"
+                ><input
+                  type="radio"
+                  name="tip-amount"
+                  id="tip-2"
+                  value="10"
+                />10%</label
+              >
+              <label for="tip-3"
+                ><input
+                  type="radio"
+                  name="tip-amount"
+                  id="tip-3"
+                  value="15"
+                />15%</label
+              >
+              <label for="tip-4"
+                ><input
+                  type="radio"
+                  name="tip-amount"
+                  id="tip-4"
+                  value="25"
+                />25%</label
+              >
+              <label for="tip-5"
+                ><input
+                  type="radio"
+                  name="tip-amount"
+                  id="tip-5"
+                  value="50"
+                />50%</label
+              >
+              <div>
+                <label for="custom-tip" class="sr-only"
+                  >custom tip amount</label
+                >
+                <input
+                  type="number"
+                  name="tip-amount"
+                  id="custom-tip"
+                  placeholder="Custom"
+                />
+              </div>
+            </div>
+          </fieldset>
+          <div class="form-group">
+            <label for="number-of-people">Number of people</label>
+            <span data-warning>Can't be zero</span>
+            <input
+              type="number"
+              name="number-of-people"
+              id="number-of-people"
+              placeholder="0"
+              required
+            />
           </div>
-          <input
-            type="number"
-            class="input fs-input"
-            id="people-input"
-            placeholder="1"
-            required
-          />
-        </div>
-      </div>
-
-      <div class="result flow">
-        <div class="result-row flex">
-          <div class="tip">
-            <span>Tip Amount</span>
-            <span>/ person</span>
+        </form>
+        <div class="calculated-output">
+          <div>
+            <div class="tip-details">
+              <div>
+                <p>Tip Amount</p>
+                <p>/ person</p>
+              </div>
+              <span class="calculated-tip">$4.27</span>
+            </div>
+            <div class="total-details">
+              <div>
+                <p>Total</p>
+                <p>/ person</p>
+              </div>
+              <span class="calculated-total">$32.79</span>
+            </div>
           </div>
-          <p id="display-tip">$0.00</p>
+          <button class="btn-reset">Reset</button>
         </div>
-        <div class="result-row flex">
-          <div class="total">
-            <span>Total</span>
-            <span>/ person</span>
-          </div>
-          <p id="display-total">$0.00</p>
-        </div>
-        <button type="reset">Reset</button>
-      </div>
+      </section>
     </main>
-
-    <footer>
-      <p>
-        Coded by
-        <a
-          href="https://vaibhavsompura.netlify.app"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Vaibhav Sompura</a
-        >
-      </p>
-    </footer>
   </body>
 </html>
