redid js and accessibility features, need improvements on scrolling and calculation

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </fieldset>
           <div class="form-group">
             <label for="number-of-people">Number of people</label>
-            <span data-warning>Can't be zero</span>
+            <span data-warning class="hidden">Can't be zero</span>
             <input
               type="number"
               name="number-of-people"
@@ -108,19 +108,37 @@
                 <p>Tip Amount</p>
                 <p>/ person</p>
               </div>
-              <span class="calculated-tip">$4.27</span>
+              <span class="calculated-tip">$0.00</span>
             </div>
             <div class="total-details">
               <div>
                 <p>Total</p>
                 <p>/ person</p>
               </div>
-              <span class="calculated-total">$32.79</span>
+              <span class="calculated-total">$0.00</span>
             </div>
           </div>
           <button class="btn-reset">Reset</button>
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://vaibhavsompura.netlify.app"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Vaibhav Sompura</a
+        >.
+      </div>
+    </footer>
   </body>
 </html>
